Applying Document API to render perspectived play overview